# temp_me

./: README.md
.history/: README_20250324003749.md  README_20250324003757.md  README_20250324003800.md  README_20250324003802.md  README_20250324004431.md  README_20250324004439.md  README_20250324004448.md
mycobot_control_pkg/: package.xml  setup.py
mycobot_control_pkg/mycobot_control_pkg/: slow_move_node.py
src/mycobot_control_pkg/: package.xml  setup.cfg  setup.py
src/mycobot_control_pkg/mycobot_control_pkg/: slow_move_node.py
src_visual/mycobot_control_pkg/: package.xml  setup.cfg  setup.py
src_visual/mycobot_control_pkg/mycobot_control_pkg/: fake_move_node.py
