<?xml version="1.0"?>
<package format="3">
  <name>mycobot_control_pkg</name>
  <version>0.0.1</version>
  <description>MyCobot 280 Slow Move Controller</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
