<?xml version="1.0"?>
<package format="3">
  <name>mycobot_control_pkg</name>
  <version>0.0.1</version>
  <description>Fake visual joint control for MyCobot</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
