[develop]
script_dir=$base/lib/mycobot_control_pkg
[install]
install_scripts=$base/lib/mycobot_control_pkg

[metadata]
name = mycobot_control_pkg
version = 0.0.1
description = Fake visual joint control for MyCobot
author = Your Name
author_email = you@example.com
license = Apache License 2.0

[options]
packages = find:
install_requires = 
    setuptools
zip_safe = true

[options.entry_points]
console_scripts =
    fake_move_node = mycobot_control_pkg.fake_move_node:main
